# nuc_drone

./: README.md
src/usb_comm/: CMakeLists.txt  package.xml
src/usb_comm/config/: usb_comm_config.yaml
src/usb_comm/launch/: usb_comm_launch.py
src/usb_comm/src/: serial_comm_node.cpp
